# DrumTracker

./: .gitignore  .replit  API_REFERENCE.md  ARCHITECTURE.md  DrumTracerUI_project_structure(UI layer).txt  DrumTrackerDEV.slnx  FILES_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  Pages_Home_HomeView.xaml  README.md  Resources_Colors.xaml  SETUP.md  SOLUTION_SUMMARY.md  backend_AudioEngine.cs  backend_HitDetectionController.cs  backend_HitDetectionEngine.cs  backend_HitDetectionRequest.cs  backend_HitDetectionResponse.cs  backend_IEngineBase.cs  backend_Program.cs  export-project.ps1  frontend_App.xaml  frontend_App.xaml.cs  frontend_INavigationService.cs  frontend_MainWindow.xaml  frontend_MainWindow.xaml.cs  frontend_NavigationService.cs  frontend_PageKey.cs  frontend_PageViewModel.cs  frontend_RelayCommand.cs  frontend_ViewModelBase.cs  index.html  pyproject.toml  replit.nix
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  drum-rms-window.md  drumtracker-stack.md  essentia-onset.md  replit-header-auth-testing.md  replit-oidc-fastapi.md  torch-cpu-install.md
attached_assets/: DrumTracer_Downloads_v2_1782214893903.html  DrumTracer_UI-UX_Wireframe_Specification_1782217561907.docx
backend/: auth.py  database.py  drumtracker.db  main.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: check_all_flows.py  check_auth_flow.py  check_concurrency_cap.py  check_concurrency_env.py  check_convert_flow.py  check_detect_flow.py  check_export_flow.py  check_replacement_flow.py  flow_harness.py  post-merge.sh
(+35 files in other folders)
