[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "librosa>=0.11.0",
    "midiutil>=1.2.1",
    "numpy>=2.4.6",
    "python-multipart>=0.0.32",
    "scipy>=1.17.1",
    "soundfile>=0.14.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.49.0",
]
